summative.moria.Moria.scala.code
while(!estFaceMur) {
  setDirection(Direction.EAST)
	while(!estSurBiscuit) {
  	avance()
	}
	prendBiscuit()
  retourne()
  while(!estSurBiscuit) {
  	avance()
  }
  recule(); poseBiscuit()
}
droite(); avance(); gauche(); avance()